# self-learning

./: README.md  pyproject.toml
src/notebook/: 20240621_evaluation_metrics.ipynb
