[project]
name = "self-learning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ShogoSasaguchi", email = "shogo.sasaguchi@hutzper.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "polars>=0.20.31",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/self_learning"]
