[project]
name = "self-learning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ShogoSasaguchi", email = "shogo.sasaguchi@hutzper.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.22.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
extend-select = ["E", "W"]

[tool.pyright]
pythonVersion = "3.12"
reportUnknownMemberType = false
reportMissingTypeStubs = false
